[metadata]
name = PyChess
version = v0.1.1-dev2
author = Daniel M
author_email = danielmiao2019@icloud.com
description = A Chess library in Python 3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DanielMiao1/PyChess
classifiers =
    Programming Language :: Python 3

[options]
package_dir =
    = .
packages = find:
python_requires = >=3

[options.packages.find]
where = .
